added class/item/item item-double
added a few div classes into the file

--- a/mobile-first-development/style.css
+++ b/mobile-first-development/style.css
@@ -22,10 +22,22 @@ h3 {
 
 /* Groups & Items */
 
+
 .group {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   margin-bottom: 100px;
+}
+
+@media all and (min-width: 800px) {
+  section,
+  h1 {
+    padding: 0 10%;
+  }
+
+  .group {
+    flex-direction: row;
+  }
 }
 
 .item {
